<resources>
    <string name="app_name">服务台端</string>
    <string name="action_settings">Settings</string>
    <string name="title_text">服务台系统</string>
    <string name="login">登陆</string>
    <string name="Tablenum">桌号</string>
    <string name="MesgType">消息</string>
    <string name="Time">时间</string>
    <string name="handle">操作</string>
    <string name="query">查询</string>
    <string name="querytitle">查询页面</string>
    <string name="foodname">菜名</string>
    <string name="state">状态</string>
    <string name="returntv">返回</string>
    <string name="Print_Order">打印订单</string>
    <string name="desk_details">餐桌信息</string>
    <string name="order_details">订单信息</string>
</resources>
