<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/system_backgr"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:id="@+id/title_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="5"
        android:layout_margin="1dp"
        >

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black9"
            android:textSize="17dp"
            android:layout_centerInParent="true"
            />
        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/black6"
            android:layout_toLeftOf="@+id/query_bt"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            />
        <Button
            android:id="@+id/query_bt"
            android:layout_width="95dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/query_bt_selector"
            android:text="@string/query"
            android:textColor="@color/black9"
            android:textSize="17dp"
            />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black6"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <TextView
                android:id="@+id/DeskID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/tag_textStyle1"
                android:text="@string/Tablenum"
                />

            <TextView
                android:id="@+id/Type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/MesgType"
                style="@style/tag_textStyle1"/>

            <TextView
                android:id="@+id/Time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Time"
                style="@style/tag_textStyle1" />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black6"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        />
    <ListView
        android:id="@+id/listView"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/divider">
    </ListView>

</LinearLayout>
